--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 MONGO_URI = mongodb+srv://root:root@cluster0.ww4pt.mongodb.net/
 
 SECRET_KEY= adjawdkjahdakwhda
+
+CLIENT_BASE_URL = http://localhost:5173
